--- a/app/currency/templates/includes/navbar.html
+++ b/app/currency/templates/includes/navbar.html
@@ -1,4 +1,5 @@
 <p>
     <a href="/template/rates">Rates Table</a>
     <a href="/template/contactus">Contact Table</a>
+    <a href="/template/source">Source Table</a>
 </p>
