--- a/app/currency/templates/contactus_delete.html
+++ b/app/currency/templates/contactus_delete.html
@@ -1,14 +1,13 @@
 {% extends 'base.html' %}
 
 {% block title %}
-    Update Source
+    Delete Contact
 {% endblock title%}
 
 {% block content %}
-    Update Source Form
+    Delete Contact with id = {{ contactus.id }}?
     <form method="post">
         {% csrf_token %}
-        {{ form.as_p }}
-        <button type="submit">Submit</button>
+        <button type="submit">Delete</button>
     </form>
 {% endblock content %}
