--- a/app/currency/templates/index.html
+++ b/app/currency/templates/index.html
@@ -1,11 +1,9 @@
 {% extends 'base.html' %}
 
 {% block title %}
-    Source
+    Index
 {% endblock title%}
 
 {% block content %}
-ID: {{ source.id }}<br>
-name: {{ source.name }}<br>
-URL: {{ source.source_url }}<br>
+    Currency
 {% endblock content %}
