--- a/app/currency/templates/contactus_table.html
+++ b/app/currency/templates/contactus_table.html
@@ -5,17 +5,21 @@
 {% endblock title%}
 
 {% block content %}
+    <a href="{% url 'currency:contactus-create'%}">Create Contact</a>
 <table>
     <tr>
         <th>id</th><th>email_from</th><th>subject</th><th>message</th>
     </tr>
 
-    {% for contact in contactus %}
+    {% for contact in object_list %}
     <tr>
         <td>{{contact.id}}</td>
         <td>{{contact.email_from}}</td>
         <td>{{contact.subject}}</td>
         <td>{{contact.message}}</td>
+         <td><a href="{% url 'currency:contactus-update' contact.id %}">Update</a></td>
+        <td><a href="{% url 'currency:contactus-delete' contact.id %}">Delete</a></td>
+        <td><a href="{% url 'currency:contactus-details' contact.id %}">Details</a></td>
     </tr>
     {% endfor %}
 </table>
