--- a/app/currency/templates/rate_update.html
+++ b/app/currency/templates/rate_update.html
@@ -1,11 +1,11 @@
 {% extends 'base.html' %}
 
 {% block title %}
-    Update Source
+    Update Rate
 {% endblock title%}
 
 {% block content %}
-    Update Source Form
+    Update Rate Form
     <form method="post">
         {% csrf_token %}
         {{ form.as_p }}
