--- a/app/currency/templates/rate_details.html
+++ b/app/currency/templates/rate_details.html
@@ -8,7 +8,7 @@
 ID: {{ rate.id }} <br>
 Buy: {{ rate.buy }}<br>
 Sell: {{ rate.sell }}<br>
-Currency: {{ rate.currency }}<br>
+Currency: {{ rate.get_currency_display }}<br>
 Source: {{ rate.source }}<br>
 Created: {{ rate.created }}<br>
 {% endblock content %}
