--- a/app/currency/templates/rate_table.html
+++ b/app/currency/templates/rate_table.html
@@ -16,7 +16,7 @@
         <td>{{rate.id}}</td>
         <td>{{rate.buy}}</td>
         <td>{{rate.sell}}</td>
-        <td>{{rate.currency}}</td>
+        <td>{{rate.get_currency_display}}</td>
         <td>{{rate.created}}</td>
         <td><a href="{% url 'currency:rate-update' rate.id %}">Update</a></td>
         <td><a href="{% url 'currency:rate-delete' rate.id %}">Delete</a></td>
