--- a/app/currency/templates/includes/navbar.html
+++ b/app/currency/templates/includes/navbar.html
@@ -2,4 +2,11 @@
     <a href="{% url 'currency:rate-list'%}">Rates Table</a>
     <a href="{% url 'currency:contactus-list'%}">Contact Table</a>
     <a href="{% url 'currency:source-list'%}">Source Table</a>
+    {% if  request.user.is_authenticated %}
+    Welcome {{ request.user.email }}
+    <a href="{% url 'logout' %}">Logout</a>
+    <a href="{% url 'profile' %}">Profile</a>
+    {% else %}
+    <a href="{% url 'login' %}">Login</a>
+    {% endif %}
 </p>
