--- a/app/currency/templates/rate_table.html
+++ b/app/currency/templates/rate_table.html
@@ -18,9 +18,15 @@
         <td>{{rate.sell}}</td>
         <td>{{rate.get_currency_display}}</td>
         <td>{{rate.created}}</td>
+        {% if request.user.is_superuser %}
         <td><a href="{% url 'currency:rate-update' rate.id %}">Update</a></td>
+        {% endif %}
+        {% if request.user.is_superuser %}
         <td><a href="{% url 'currency:rate-delete' rate.id %}">Delete</a></td>
+        {% endif %}
+        {% if request.user.is_authenticated %}
         <td><a href="{% url 'currency:rate-details' rate.id %}">Details</a></td>
+        {% endif %}
     </tr>
     {% endfor %}
 </table>
