--- a/app/currency/templates/includes/navbar.html
+++ b/app/currency/templates/includes/navbar.html
@@ -8,5 +8,6 @@
     <a href="{% url 'profile' %}">Profile</a>
     {% else %}
     <a href="{% url 'login' %}">Login</a>
+    <a href="{% url 'account:signup' %}">Sign Up</a>
     {% endif %}
 </p>
