--- a/app/currency/templates/rate_table.html
+++ b/app/currency/templates/rate_table.html
@@ -8,7 +8,7 @@
     <a href="{% url 'currency:rate-create' %}">Create Rate</a>
 <table>
     <tr>
-        <th>id</th><th>buy</th><th>sell</th><th>currency</th><th>created</th>
+        <th>id</th><th>buy</th><th>sell</th><th>source</th><th>currency</th><th>created</th>
     </tr>
 
     {% for rate in object_list %}
@@ -16,6 +16,7 @@
         <td>{{rate.id}}</td>
         <td>{{rate.buy}}</td>
         <td>{{rate.sell}}</td>
+        <td>{{rate.source}}</td>
         <td>{{rate.get_currency_display}}</td>
         <td>{{rate.created}}</td>
         {% if request.user.is_superuser %}
