--- a/app/currency/templates/source_update.html
+++ b/app/currency/templates/source_update.html
@@ -1,14 +1,15 @@
 {% extends 'base.html' %}
-
+{% load crispy_forms_tags %}
 {% block title %}
     Update Source
 {% endblock title%}
 
 {% block content %}
     Update Source Form
-    <form method="post">
+    <br><img src="{{object.source_image_url}}" width="100" height="100">
+    <form method="post" enctype="multipart/form-data">
         {% csrf_token %}
-        {{ form.as_p }}
-        <button type="submit">Submit</button>
+        {{ form|crispy }}
+        <button class="btn btn-primary" type="submit">Submit</button>
     </form>
 {% endblock content %}
