--- a/app/account/templates/signup.html
+++ b/app/account/templates/signup.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-
+{% load crispy_forms_tags %}
 {% block title %}
 Sign Up
 {% endblock title%}
@@ -8,7 +8,7 @@ Sign Up
     Sign Up Form
     <form method="post">
         {% csrf_token %}
-        {{ form.as_p }}
+        {{ form|crispy }}
         <button type="submit">Submit</button>
     </form>
 {% endblock content %}
