--- a/app/currency/templates/contactus_create.html
+++ b/app/currency/templates/contactus_create.html
@@ -1,5 +1,7 @@
 {% extends 'base.html' %}
 
+{% load crispy_forms_tags %}
+
 {% block title %}
     Create  Contact
 {% endblock title%}
@@ -8,7 +10,7 @@
     Create Contact Form
     <form method="post">
         {% csrf_token %}
-        {{ form.as_p }}
+        {{ form|crispy }}
         <button type="submit">Submit</button>
     </form>
 {% endblock content %}
