--- a/app/currency/templates/includes/navbar.html
+++ b/app/currency/templates/includes/navbar.html
@@ -1,13 +1,40 @@
 <p>
-    <a href="{% url 'currency:rate-list'%}">Rates Table</a>
-    <a href="{% url 'currency:contactus-list'%}">Contact Table</a>
-    <a href="{% url 'currency:source-list'%}">Source Table</a>
-    {% if  request.user.is_authenticated %}
+
+    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+  <div class="container-fluid">
+    <a class="navbar-brand" href="{% url 'index' %}">Home</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav">
+        <li class="nav-item">
+          <a class="nav-link" href="{% url 'currency:rate-list'%}">Rates Table</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="{% url 'currency:contactus-list'%}">Contact Table</a>
+        </li>
+          <li class="nav-item">
+          <a class="nav-link" href="{% url 'currency:source-list'%}">Source Table</a>
+        </li>
+          {% if  request.user.is_authenticated %}
     Welcome {{ request.user.email }}
-    <a href="{% url 'logout' %}">Logout</a>
-    <a href="{% url 'profile' %}">Profile</a>
-    {% else %}
-    <a href="{% url 'login' %}">Login</a>
-    <a href="{% url 'account:signup' %}">Sign Up</a>
-    {% endif %}
+          <li class="nav-item">
+          <a class="nav-link" href="{% url 'logout' %}">Logout</a>
+        </li>
+          <li class="nav-item">
+          <a class="nav-link" href="{% url 'account:profile' %}">Profile</a>
+        </li>
+          {% else %}
+          <li class="nav-item">
+          <a class="nav-link" href="{% url 'login' %}">Login</a>
+        </li>
+          <li class="nav-item">
+          <a class="nav-link" href="{% url 'account:signup' %}">Sign Up</a>
+        </li>
+          {% endif %}
+      </ul>
+    </div>
+  </div>
+</nav>
 </p>
