--- a/app/templates/registration/password_change_form.html
+++ b/app/templates/registration/password_change_form.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-
+{% load crispy_forms_tags %}
 {% block title %}
     Change password
 {% endblock title%}
@@ -8,7 +8,7 @@
     Change password
     <form method="post">
         {% csrf_token %}
-        {{ form.as_p }}
+        {{ form|crispy }}
         <button type="submit">Submit</button>
     </form>
 {% endblock content %}
