--- a/app/templates/registration/password_reset_confirm.html
+++ b/app/templates/registration/password_reset_confirm.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-
+{% load crispy_forms_tags %}
 {% block title %}
     Change password
 {% endblock title%}
@@ -9,7 +9,7 @@
     <h3>Change password</h3>
     <form method="post">
       {% csrf_token %}
-      {{ form.as_p }}
+      {{ form|crispy }}
       <button type="submit">Change password</button>
     </form>
   {% else %}
