--- a/app/templates/registration/profile.html
+++ b/app/templates/registration/profile.html
@@ -1,4 +1,6 @@
 {% extends 'base.html' %}
+{% load crispy_forms_tags %}
+{% load static %}
 
 {% block title %}
     profile
@@ -6,10 +8,12 @@
 
 {% block content %}
     Profile
+
+<br><img src="{{object.avatar_url}}" width="100" height="100">
 <br><a href="{% url 'password_change' %}">Change password</a>
-    <form method="post">
+    <form method="post" enctype="multipart/form-data">
         {% csrf_token %}
-        {{ form.as_p }}
+        {{ form|crispy }}
         <button type="submit">Save</button>
     </form>
 {% endblock content %}
