--- a/app/currency/templates/rate_details.html
+++ b/app/currency/templates/rate_details.html
@@ -7,7 +7,7 @@
 {% block content %}
 ID: {{ rate.id }} <br>
 Buy: {{ rate.buy }}<br>
-Sell: {{ rate.sell }}<br>
+Sale: {{ rate.sale }}<br>
 Currency: {{ rate.get_currency_display }}<br>
 Source: {{ rate.source }}<br>
 Created: {{ rate.created }}<br>
